[workspace]
resolver = "2"
members = ["systems", "components"]

[package]
name = "murg"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9.0" }
bevy_spine = { git = "https://github.com/jabuwu/bevy_spine" }
bevy_egui = "0.17.0"
bevy-inspector-egui = "0.14.0"
bevy_diagnostic_visualizer = "0.1.0"
components = { path = "components" }
hot-lib-reloader = { version = "0.6.4", optional = true }
wasm-bindgen = "0.2.83"
rand = "0.8.5"
systems = { path = "systems" }

[features]
default = []
reload = [
  "dep:hot-lib-reloader",
  # Make sure that the types don't change:
  "components/dynamic",
  # This is important on windows for avoiding file locking issues:
  "bevy/dynamic",
]
