[package]
name = "components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1" }
bevy_egui = "0.16.1"
bevy-inspector-egui = "0.13.0"
bevy_diagnostic_visualizer = "0.1.0"
wasm-bindgen = "0.2.83"

[features]
default = []
dynamic = ["bevy/dynamic"]
