[package]
name = "components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.0" }
bevy_egui = "0.17.0"
bevy-inspector-egui = "0.14.0"
bevy_common_assets = "0.4.0"
bevy_diagnostic_visualizer = "0.1.0"
bevy_spine = { git = "https://github.com/jabuwu/bevy_spine" }
serde = "1.0.147"
serde_json = "1.0.87"
wasm-bindgen = "0.2.83"

[features]
default = []
dynamic = ["bevy/dynamic"]
