[package]
name = "systems"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
bevy = { version = "0.9.0" }
bevy_egui = "0.17.0"
bevy-inspector-egui = "0.14.0"
bevy_diagnostic_visualizer = "0.1.0"
components = { path = "../components" }
wasm-bindgen = "0.2.83"
log = "0.4.17"
rand = "0.8.5"

[features]
default = []
dynamic = ["bevy/dynamic", "components/dynamic"]
