[package]
name = "systems"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
bevy = { version = "0.9.0" }
bevy_egui = "0.17.0"
bevy-inspector-egui = "0.14.0"
bevy_common_assets = "0.4.0"
bevy_spine = { git = "https://github.com/jabuwu/bevy_spine" }
bevy_diagnostic_visualizer = "0.1.0"
components = { path = "../components" }
log = "0.4.17"
rand = "0.8.5"
serde = "1.0.147"
serde_json = "1.0.87"
wasm-bindgen = "0.2.83"

[features]
default = []
dynamic = ["bevy/dynamic", "components/dynamic"]
